first commit (splash & onboard)

--- a/MockupTest/MockupTest/Info.plist
+++ b/MockupTest/MockupTest/Info.plist
@@ -21,5 +21,11 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleDarkContent</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
